<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_gallery">

    <fragment
        android:id="@+id/nav_home"
        android:name="ru.nikshlykov.clothesshop.ui.fragments.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="ru.nikshlykov.clothesshop.ui.fragments.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="ru.nikshlykov.clothesshop.ui.fragments.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" >
    </fragment>

    <fragment
        android:id="@+id/nav_auth_profile_flow"
        android:name="ru.nikshlykov.clothesshop.ui.fragments.AuthProfileFlowFragment"
        android:label="AuthProfileFlow"
        tools:layout="@layout/flow_fragment_auth_profile"/>

    <!--<activity
        android:id="@+id/authProfileActivity"
        android:name="ru.nikshlykov.clothesshop.ui.activities.AuthProfileActivity"
        android:label="AuthProfileActivity" >
        <argument
            android:name="product_id"
            app:argType="integer" />
    </activity>-->
</navigation>